--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
 </head>
 <body>
-    
+    <label for="date">Select a date:</label>
+    <input type="date" id="date" name="date">
+    <button onclick="checkDate()">Check Date</button>
+    <p id="result"></p>
 </body>
 </html>
