--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcel Serumpun</title>
     <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+    <script src="js/calc.js" defer></script>
 </head>
 <body>
-    <label for="date">Select a date:</label>
+    <label for="date">Tarikh parcel diterima:</label>
     <input type="date" id="date" name="date">
     <button onclick="checkDate()">Check Date</button>
     <p id="result"></p>
