--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="js/calc.js" defer></script>
 </head>
 <body>
-    <label for="date">Tarikh parcel diterima:</label>
-    <input type="date" id="date" name="date">
-    <button onclick="checkDate()">Check Date</button>
-    <p id="result"></p>
+    <div class="container">
+        <label for="date">Tarikh parcel diterima:</label>
+        <input type="date" id="date" name="date">
+        <button onclick="checkDate()">Check Date</button>
+        <p id="result"></p>
+    </div>
 </body>
 </html>
