--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="date" id="date" name="date">
         <button onclick="checkDate()">Check Date</button>
         <p id="result"></p>
+        <a href="pages/Homepage.html"><button>Check Date</button></a>
     </div>
 </body>
 </html>
