--- a/pages/Homepage.html
+++ b/pages/Homepage.html
@@ -3,91 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
-    <link rel="icon" type="image/x-icon" href="resources/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../resources/favicon.ico" />
     <link rel="stylesheet" href="../css/Homepage.css" />
+    <title>Homepage</title>
   </head>
   <body>
-    <div class="homepage">
-      <div class="header">
-        <div class="rectangle-1"></div>
-        <div class="rectangle-2"></div>
-        <img class="polygon-1" src="../resources/polygon-10.svg" />
-        <div class="logos">
-          <img class="image-1" src="../resources/image-10.png" />
-          <img class="logo-k-14-1" src="../resources/logo-k-14-10.png" />
+    <div class="header">
+      <div class="row" style="gap: 0px">
+        <div class="box blue" style="position: relative; z-index: 0"></div>
+        <div class="box trapezium" style="position: relative; z-index: 1"></div>
+        <div class="row logos">
+          <img class="logo" src="../resources/image-10.png" />
           <div class="x">X</div>
+          <img class="logo" src="../resources/logo-k-14-10.png" />
         </div>
-        <div class="login">
-          <div class="rectangle-3"></div>
-          <div class="login2">LOGIN</div>
-        </div>
+        <a href="#">
+          <button class="login-button">LOGIN</button>
+        </a>
       </div>
-      <div class="content">
-        <div class="search-for-your-parcel">Search for your parcel</div>
-        <div
-          class="generate-a-pdf-report-for-the-list-of-parcels-arrived-at-a-specific-date"
-        >
-          Generate a PDF report for the list of parcels arrived at a specific
-          date
-        </div>
-        <div class="enter-parcel-arrival-date">Enter parcel arrival date</div>
-        <div class="here">here</div>
-        <div class="here2">here</div>
-        <div
-          class="search-for-your-parcel-id-number-to-check-its-availability-in-parcel-serumpun-s-database"
-        >
-          Search for your parcel id number to check its availability in
-          <br />
-          Parcel Serumpun’s database
-        </div>
-        <div class="search-bar">
-          <div class="state-layer">
-            <div class="content2">
-              <div class="supporting-text">Search</div>
-            </div>
-            <div class="trailing-elements">
-              <div class="_1st-trailing-icon">
-                <div class="content3">
-                  <div class="state-layer2">
-                    <img class="icon" src="../resources/icon0.svg" />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="divider">
-          <div class="divider2"></div>
-          <div class="or">or</div>
-          <div class="divider2"></div>
-        </div>
-        <div class="docked-input-date-picker-desktop">
-          <div class="text-field">
-            <div class="state-layer3">
-              <div class="content4">
-                <div class="input-text-container">
-                  <div class="input-text">08/17/2025</div>
-                </div>
-                <div class="label-text-container">
-                  <div class="label-text">Date</div>
-                </div>
-              </div>
-              <div class="trailing-icon">
-                <div class="content5">
-                  <div class="state-layer4">
-                    <img class="icon2" src="../resources/icon1.svg" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="supporting-text2">
-              <div class="supporting-text3">MM/DD/YYYY</div>
-            </div>
-          </div>
-        </div>
+    </div>
+
+    <div class="content">
+      <h2>Search for your parcel<br />here</h2>
+      <p>
+        Search for your parcel id number to check its availability in<br />Parcel
+        Serumpun’s database
+      </p>
+      <form action="" method="post">
+        <input class="search" type="text" id="name" name="name" placeholder="Search">
+      </form>
+
+      <div class="divide">
+        <div class="divider"></div>
+        <div class="or">or</div>
+        <div class="divider"></div>
       </div>
-      <div class="trademark-2025-parcel-serumpun-all-rights-reserved">
+
+      <h2>Enter parcel arrival date<br />here</h2>
+      <p>
+        Generate a PDF report for the list of parcels arrived at a specific date
+      </p>
+      <form action="" method="post">
+        <div class="date-wrapper">
+          <input class="date" type="date" id="name" name="name">
+        </div><br>
+        <input class="submit" type="submit">
+      </form>
+
+      <div class="trademark">
         Trademark ® 2025 Parcel Serumpun. All Rights Reserved
       </div>
     </div>
