--- a/pages/ParcelView.html
+++ b/pages/ParcelView.html
@@ -40,9 +40,40 @@
     </div>
 
     <div class="content">
-      <div class="column" style="justify-content: space-between;">
+      <div class="column" style="justify-content: space-between; height: fit-content;">
         <p class="section-title">Parcel Info</p>
-        <div class="section-box"></div>
+        <div class="section-box">
+          <p class="owner">Owner's name</p>
+          <div class="row">
+            <div class="column">
+              <div class="row">
+                <p class="details">Arrive date</p>
+                <div class="dash"></div>
+                <p class="details ans">24 June</p>
+              </div>
+              <div class="row">
+                <p class="details">Parcel ID</p>
+                <div class="dash"></div>
+                <p class="details ans">24/6-05</p>
+              </div>
+              <div class="row">
+                <p class="details">Phone number</p>
+                <div class="dash"></div>
+                <p class="details ans">010-8769035</p>
+              </div>
+              <div class="row">
+                <p class="details">Price</p>
+                <div class="dash"></div>
+                <p class="details ans">RM 2.50</p>
+              </div>
+            </div>
+            <div class="row">
+              <p class="details">Status</p>
+                <div class="dash"></div>
+                <p class="details ans">Not Claimed</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="column">
