--- a/pages/ParcelView.html
+++ b/pages/ParcelView.html
@@ -81,5 +81,9 @@
         <div></div>
       </div>
     </div>
+
+    <div class="trademark">
+      Trademark ® 2025 Parcel Serumpun. All Rights Reserved
+    </div>
   </body>
 </html>
